--- a/ProjetoStrata/index.html
+++ b/ProjetoStrata/index.html
@@ -7,12 +7,22 @@
     <meta name="keywords" content="html, css, webdesign, serfrontend">
     <link rel="stylesheet" type="text/css" href="fontawesome/css/all.min.css">
     <title>Atividade Projeto Strata - Curso Webdesign</title>
+    <!--Normalize: mesma formatação em todos os browsers----->
+    <link rel="stylesheet" href="/ProjetoStrata/CSS/normalize.css">
+    <!-------------------->
+
+    <link rel="stylesheet" href="/ProjetoStrata/CSS/estilo.css">
+
+    <!--Google fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <!---------------->
 </head>
 <body>
     <header class="main-header">
        <a href="index.html"><img src="/ProjetoStrata/ProjetoStrataImages/avatar.jpg" alt="Imagem com borda formando círculo, homem de costas, pele branca, cabelo curto, usando camisa preta, fundo da imagem em cinza claro sólido."></a>
-       <h1>Trabalhos e groselhas de<br><strong>Andrea Felipe</strong></h1>
-       <p><a href="https://html5up.net/">Retirado de html5up.net</a></p>
+
+       <h1 class="main-header-title">Trabalhos e groselhas de<br><strong>Andrea Felipe</strong></h1>
+       <p>Retirado de <a href="https://html5up.net/" class="main-header-link">html5up.net</a></p>
     </header>
 
     <main class="main-content">
