--- a/ProjetoStrata/index.html
+++ b/ProjetoStrata/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="html, css, webdesign, serfrontend">
-    <link rel="stylesheet" type="text/css" href="fontawesome/css/all.min.css">
+    <meta name="author" content="Daniel Tapias Morales">
     <title>Atividade Projeto Strata - Curso Webdesign</title>
+    <!--icones-->
+    <link rel="stylesheet" type="text/css" href="fontawesome/css/all.min.css">
+    <!-------------------->
     <!--Normalize: mesma formatação em todos os browsers----->
     <link rel="stylesheet" href="/ProjetoStrata/CSS/normalize.css">
     <!-------------------->
@@ -90,11 +93,19 @@
         <section class="main-content-section">
             <h3>Elements</h3>
             <h4>Text</h4>
-            <p>This is <b>bold</b> and this is <strong> strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>. This is <sup>superscript</sup> text and this is <sub>subscript</sub> text. This is <u>underlined</u> and this is <code> code: for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
+            <p>This is <b>bold</b> and this is <strong> strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>. This is <sup>superscript</sup> text and this is <sub>subscript</sub> text. This is <u>underlined</u> and this is <code> code: for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.
+            </p>
+
+            <h1>Título h1</h1>
+            <h2>Título h2</h2>
+            <h3>Título h3</h3>
+            <h4>Título h4</h4>
+            <h5>Título h5</h5>
+            <h6>Título h6</h6>
 
             <!-- tag <blockquote> para citações longas-->
             <blockquote cite="http://developer.mozilla.org">
-                <p>Esta é uma citação tirada da Mozilla Developer Center.</p>
+                Esta é uma citação tirada da Mozilla Developer Center.
             </blockquote>
 
             <!--tag <q> para citações curtas-->
@@ -104,7 +115,7 @@
             <pre>
                 <code>
 &lt;script&gt;
-alert('oi');
+    alert('oi');
 &lt;/script&gt;
                 </code>
             </pre>
@@ -316,7 +327,7 @@ alert('oi');
         </section>
     </main>
     <footer class="main-footer">
-        <i class="fa-brands fa-instagram"></i>
+
     </footer>
 </body>
 </html>
