--- a/ProjetoStrata/index.html
+++ b/ProjetoStrata/index.html
@@ -121,6 +121,9 @@
             </pre>
 
             <h4>Listas</h4>
+
+            <div class="row">
+                <div class="col2">
                 <h5>Não ordenada</h5>
                 <ul>
                     <li>Item 1</li>
@@ -135,20 +138,26 @@
                     <li>Item 3</li>
                 </ol>
 
-                <h5 class="alternate">Alternate</h5>
-                <ul>
+                </div>
+
+                <div class="col2">
+                <h5>Alternate</h5>
+                <ul  class="ul-alternate">
                     <li>Item 1</li>
                     <li>Item 2</li>
                     <li>Item 3</li>
                 </ul>
 
                 <h5>Icones</h5>
-                <ul>
+                <ul class="ul-icons">
                     <li><i class="fa-brands fa-twitter"></i></li>
                     <li><i class="fa-brands fa-square-facebook"></i></li>
                 </ul>
-
+                </div>
+            </div>
                 <h5>Actions</h5>
+                <div class="row">
+                    <div class="col2">
                 <p>
                     <a href="#" class="button-default">Default</a>
                     <a href="#" class="button-default button-default-stroke">Default</a>
@@ -157,6 +166,9 @@
                     <a href="#" class="button-default button-default-small" >Default</a>
                     <a href="#" class="button-default button-default-small button-default-stroke">Default</a>
                 </p>
+
+                </div>
+                <div class="col2">
                 <p>
                     <a href="#" class="button-default button-default-full" >Default</a>
                     <a href="#" class="button-default button-default-full button-default-stroke">Default</a>
@@ -166,6 +178,8 @@
                     button-default-full" >Default</a>
                     <a href="#" class="button-default button-default-small button-default-full button-default-stroke">Default</a>
                 </p>
+                </div>
+                </div>
 
             <h4>Table</h4>
 
@@ -213,7 +227,7 @@
             </table>
 
             <h5>Alternate</h5>
-            <table class="table-alternate">
+            <table class="table table-alternate">
                 <thead>
                     <tr>
                         <td>Name</td>	<td>Description</td>
