Estilização de cards, get in touch e forms.

--- a/ProjetoStrata/index.html
+++ b/ProjetoStrata/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <header class="main-header">
-       <a href="index.html"><img src="/ProjetoStrata/ProjetoStrataImages/avatar.jpg" alt="Imagem com borda formando círculo, homem de costas, pele branca, cabelo curto, usando camisa preta, fundo da imagem em cinza claro sólido."></a>
+       <a href="index.html" class="main-header-link image-link"><img src="/ProjetoStrata/ProjetoStrataImages/avatar.jpg" alt="Imagem com borda formando círculo, homem de costas, pele branca, cabelo curto, usando camisa preta, fundo da imagem em cinza claro sólido." ></a>
 
        <h1 class="main-header-title">Trabalhos e groselhas de<br><strong>Andrea Felipe</strong></h1>
        <p>Retirado de <a href="https://html5up.net/" class="main-header-link">html5up.net</a></p>
@@ -35,59 +35,77 @@
 
         <section class="main-content-section">
             <h3>Recents Works</h3>
+            <div class="row">
+            <div class="col2">
             <article class="recent-works-card">
-                <a href="/ProjetoStrata/ProjetoStrataImages/fulls/01.jpg"><img src="/ProjetoStrata/ProjetoStrataImages/thumbs/01.jpg" alt="Imagem de rua, dia. É possível ver a traseira de um carro na cor branca, estacionado e um espaço para estacionar bicicletas com duas bicletas alocadas."></a>
+                <a href="/ProjetoStrata/ProjetoStrataImages/fulls/01.jpg" class="image-link"><img src="/ProjetoStrata/ProjetoStrataImages/thumbs/01.jpg" alt="Imagem de rua, dia. É possível ver a traseira de um carro na cor branca, estacionado e um espaço para estacionar bicicletas com duas bicletas alocadas."></a>
                 <p class="recent-works-card-title">Magna sed consequat tempus</p>
                 <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
             </article>
             <article class="recent-works-card">
-                <a href="/ProjetoStrata/ProjetoStrataImages/fulls/02.jpg"><img src="/ProjetoStrata/ProjetoStrataImages/thumbs/02.jpg" alt="Imagem de árvores, luz do sol passando entre elas."></a>
+                <a href="/ProjetoStrata/ProjetoStrataImages/fulls/02.jpg" class="image-link"><img src="/ProjetoStrata/ProjetoStrataImages/thumbs/02.jpg" alt="Imagem de árvores, luz do sol passando entre elas."></a>
                 <p class="recent-works-card-title">Ultricies lacinia interdum</p>
                 <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
             <article class="recent-works-card">
-                <a href="/ProjetoStrata/ProjetoStrataImages/fulls/03.jpg"><img src="/ProjetoStrata/ProjetoStrataImages/thumbs/03.jpg" alt="Imagem de prateiras de livros de uma biblioteca"></a>
+                <a href="/ProjetoStrata/ProjetoStrataImages/fulls/03.jpg" class="image-link"><img src="/ProjetoStrata/ProjetoStrataImages/thumbs/03.jpg" alt="Imagem de prateiras de livros de uma biblioteca"></a>
                 <p class="recent-works-card-title">Tortor metus commodo</p>
                 <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+             </div>
+             <div class="col2">
             <article class="recent-works-card">
-                <a href="/ProjetoStrata/ProjetoStrataImages/fulls/04.jpg"><img src="/ProjetoStrata/ProjetoStrataImages/thumbs/04.jpg" alt="Imagem de degraus de escada, nas cores cinza e amarelo, foco no pés de uma pessoa dando a impressão de que está subindo escada, aparece a barra da calça de cor verde escuro e o tênis preto e sola branca."></a>
+                <a href="/ProjetoStrata/ProjetoStrataImages/fulls/04.jpg" class="image-link"><img src="/ProjetoStrata/ProjetoStrataImages/thumbs/04.jpg" alt="Imagem de degraus de escada, nas cores cinza e amarelo, foco no pés de uma pessoa dando a impressão de que está subindo escada, aparece a barra da calça de cor verde escuro e o tênis preto e sola branca."></a>
                 <p class="recent-works-card-title">Quam neque phasellus</p>
                 <p>Tem ipsum dolor sit amet nisl sed nullam feugiat.</p>
             <article class="recent-works-card">
-                <a href="/ProjetoStrata/ProjetoStrataImages/fulls/05.jpg"><img src="/ProjetoStrata/ProjetoStrataImages/thumbs/05.jpg" alt="Imagem de montanha, topo esbranquiçado pela neve, vegetação escura com tom puando para preto. Dia, céu azul claro, uma nuvem no lado esquerdo."></a>
+                <a href="/ProjetoStrata/ProjetoStrataImages/fulls/05.jpg" class="image-link"><img src="/ProjetoStrata/ProjetoStrataImages/thumbs/05.jpg" alt="Imagem de montanha, topo esbranquiçado pela neve, vegetação escura com tom puando para preto. Dia, céu azul claro, uma nuvem no lado esquerdo."></a>
                 <p class="recent-works-card-title">Nunc enim commodo aliquet</p>
                 <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
             <article class="recent-works-card">
-                <a href="/ProjetoStrata/ProjetoStrataImages/fulls/06.jpg"><img src="/ProjetoStrata/ProjetoStrataImages/thumbs/06.jpg" alt="Imagem de casa na árvore de madeira, vegetação ao redor."></a>
+                <a href="/ProjetoStrata/ProjetoStrataImages/fulls/06.jpg" class="image-link"><img src="/ProjetoStrata/ProjetoStrataImages/thumbs/06.jpg" alt="Imagem de casa na árvore de madeira, vegetação ao redor."></a>
                 <p class="recent-works-card-title">Risus ornare lacinia</p>
                 <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.<p>
+                </div>
+            </div>
             <a href="#" title="Veja portifolio completo">Veja Portifólio completo</a>
         </section>
 
         <section class="main-content-section">
             <h3>Get in Touch</h3>
             <p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+            <div class="row">
+                <div class="col2-3">
+                    <form action="#" method="post">
+                        <div class="row">
+                        <div class="col2">
+                        <label for="nome">Nome completo</label>
+                        <input type="text" name="nome" id="nome">
+                        </div>
+                        <div class="col2">
+                        <label for="email">E-mail</label>
+                        <input type="text" name0="email" id="email">
+                        </div>
+                        </div>
+                        <label for="mensagem">Digite sua mensagem</label>
+                        <textarea name="mensagem" id="mensagem"></textarea>
+                        <input type="submit" value="Enviar" class="button-default button-default-stroke">
+                    </form>
+            </div>
+                <div class="col1-3">
+                    <address>
+                        <p>
+                            <span>Endereço: 1234 Somewhere Rd. Nashville, TN 00000 United States</span>
+                        </p>
+                        <p>
+                            <span>Telefone: 000-000-000</span>
+                        </p>
+                        <p>
+                            <span>E-mail: email@server.com</span>
+                        </p>
+                    </address>
+                </div>
+            </div>
 
-            <form action="#" method="post">
-                <label for="nome">Nome completo</label>
-                <input type="text" name="nome" id="nome">
-                <label for="email">E-mail</label>
-                <input type="text" name="email" id="email">
-                <label for="mensagem">Digite sua mensagem</label>
-                <textarea name="mensagem" id="mensagem"></textarea>
-                <input type="submit" value="Enviar">
-            </form>
-
-            <address>
-                <p>
-                    <span>Endereço: 1234 Somewhere Rd. Nashville, TN 00000 United States</span>
-                </p>
-                <p>
-                    <span>Telefone: 000-000-000</span>
-                </p>
-                <p>
-                    <span>E-mail: email@server.com</span>
-                </p>
-            </address>
+            
         </section>
 
         <section class="main-content-section">
@@ -314,7 +332,7 @@
                 <label for="mensagem">Mensagem<textarea placeholder="Digite uma mensagem" id="msg"></textarea></label>
 
                 <input type="submit" value="Enviar" class="button-default">
-                <input type="reset" value="Limpar" class="button-default-stroke">
+                <input type="reset" value="Limpar" class="button-default button-default-stroke">
 
         </section>
 
