--- a/ProjetoStrata/index.html
+++ b/ProjetoStrata/index.html
@@ -342,12 +342,15 @@
                 <img src="/ProjetoStrataImages/fulls/05.jpg" alt="">
             </div>
             <div class="gallery-thumb">
-                <img src="/ProjetoStrataImages/thumbs/01.jpg" alt="">
-                <img src="/ProjetoStrataImages/thumbs/02.jpg" alt="">
-                <img src="/ProjetoStrataImages/thumbs/03.jpg" alt="">
-                <img src="/ProjetoStrataImages/thumbs/04.jpg" alt="">
-                <img src="/ProjetoStrataImages/thumbs/05.jpg" alt="">
-                <img src="/ProjetoStrataImages/thumbs/06.jpg" alt="">
+                <img class="col1-3" src="/ProjetoStrata/ProjetoStrataImages/thumbs/01.jpg" alt="">
+                <img class="col1-3" src="/ProjetoStrata/ProjetoStrataImages/thumbs/02.jpg" alt="">
+                <img class="col1-3" src="/ProjetoStrata/ProjetoStrataImages/thumbs/03.jpg" alt="">
+                <img class="col1-3" src="/ProjetoStrata/ProjetoStrataImages/thumbs/04.jpg" alt="">
+                <img class="col1-3" src="/ProjetoStrata/ProjetoStrataImages/thumbs/05.jpg" alt="">
+                <img class="col1-3" src="/ProjetoStrata/ProjetoStrataImages/thumbs/06.jpg" alt="">
+                <img class="col1-3" src="/ProjetoStrata/ProjetoStrataImages/thumbs/01.jpg" alt="">
+                <img class="col1-3" src="/ProjetoStrata/ProjetoStrataImages/thumbs/02.jpg" alt="">
+                <img class="col1-3"src="/ProjetoStrata/ProjetoStrataImages/thumbs/03.jpg" alt="">
             </div>
 
             <h4>Left & Right</h4>
